[gd_scene load_steps=11 format=3 uid="uid://4gwbm386kfg2"]

[ext_resource type="Script" uid="uid://bqdxdwovveq63" path="res://scripts/player_script.gd" id="1_xhfnw"]
[ext_resource type="Texture2D" uid="uid://4i8fsh7jehbf" path="res://assets/boat.png" id="2_kpjcp"]
[ext_resource type="Shader" uid="uid://b8vrakaw2oi7u" path="res://scripts/circle.gdshader" id="3_3li8b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(259.5, 31)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mdl7e"]
shader = ExtResource("3_3li8b")
shader_parameter/radius = 1.0
shader_parameter/edge_softness = 0.05
shader_parameter/color = Color(0.2, 1, 1, 0.0392157)

[sub_resource type="CircleShape2D" id="CircleShape2D_qu4a1"]
radius = 0.01

[sub_resource type="Animation" id="Animation_mdl7e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sense_circle/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sense_circle/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sense_circle/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-739, -743)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sense_circle/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 0.0196078)]
}

[sub_resource type="Animation" id="Animation_3li8b"]
resource_name = "circle_sense"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sense_circle/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(1519, 1543)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sense_circle/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 757.238]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sense_circle/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15, 15), Vector2(-739, -743)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sense_circle/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 0, 0.0196078), Color(1, 1, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qu4a1"]
_data = {
&"RESET": SubResource("Animation_mdl7e"),
&"circle_sense": SubResource("Animation_3li8b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3li8b"]
size = Vector2(280, 84)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xhfnw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kpjcp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.75, -10.5)
shape = SubResource("RectangleShape2D_kpjcp")

[node name="sense_circle" type="Area2D" parent="."]
position = Vector2(-19, -12)
collision_layer = 2
collision_mask = 2

[node name="ColorRect" type="ColorRect" parent="sense_circle"]
material = SubResource("ShaderMaterial_mdl7e")
offset_left = -739.0
offset_top = -743.0
offset_right = -699.0
offset_bottom = -703.0
color = Color(1, 1, 0, 0.0196078)

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense_circle"]
position = Vector2(20, 20)
shape = SubResource("CircleShape2D_qu4a1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qu4a1")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7, 4)
shape = SubResource("RectangleShape2D_3li8b")

[node name="sense_timer" type="Timer" parent="."]

[connection signal="body_entered" from="sense_circle" to="." method="_on_sense_circle_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="sense_timer" to="." method="_on_sense_timer_timeout"]
